--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
     </aside>
 
     <!-- Resume -->
-    <section id="resume" class="resume">
+    <button data-toggle="collapse" data-target="#resume">Collapsible</button>
+    <section id="resume" class="collapse">
        <div id="ResumeRuby" class="-K-1KjYYXudDk2qcJFLb"><script src="http://backend.resumeruby.com/embed/v1/embed.js"></script></div>
     </section>
 
