--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
 
     <!-- Footer -->
-    <footer id= "contacts">
-        <div class="contacts">
+    <footer id= "contact">
+        <div class="contact">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>John Henning</strong>
