--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
 
     <!-- Resume -->
     
-    <section id="resume">
-        <div>
-            <h2>Test</h2>
-            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ResumeRuby">Simple collapsible</button>
-            <div id="ResumeRuby" class="-K-1KjYYXudDk2qcJFLb, collapse"><script src="http://backend.resumeruby.com/embed/v1/embed.js"></script></div>
+    <section>
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#resume">Simple collapsible</button>
+        <div id="resume" class="collapse">
+            <div id="ResumeRuby" class="-K-1KjYYXudDk2qcJFLb"><script src="http://backend.resumeruby.com/embed/v1/embed.js"></script></div>
        </div>
     </section>
 
