--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
+            <li class="sidebar-brand">
+                <a href="#top"  onclick = $("#menu-close").click(); >Home</a>
             </li>
             <li>
                 <a href="#about" onclick = $("#menu-close").click(); >About Me</a>
@@ -70,8 +70,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">.</p>
+                    <h2>About Me</h2>
+                    <p class="lead">I am a 3rd year Computer Science and Mathematics Double Major at the University of Florida. I 
+                    am currently working in the Computational NeuroEngineering Lab doing research in 
+                    </p>
                 </div>
             </div>
             <!-- /.row -->
@@ -85,24 +87,14 @@
     <!-- Resume -->
     
     <section>
-        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#resume">Simple collapsible</button>
+        <div class="col-md-4 text-center">
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#resume">My Resume</button>
+        </div>
         <div id="resume" class="collapse">
             <div id="ResumeRuby" class="-K-1KjYYXudDk2qcJFLb"><script src="http://backend.resumeruby.com/embed/v1/embed.js"></script></div>
        </div>
     </section>
 
-    <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-                </div>
-            </div>
-        </div>
-    </aside>
 
 
 
