--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
                     <p class="lead">I am a 3rd year Computer Science and Mathematics Double Major at the University of Florida. I 
-                    am currently working in the Computational NeuroEngineering Lab doing research in 
+                    am currently working in the Computational NeuroEngineering Lab doing research in Machine Learning and Neural Networks.
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
     <!-- Resume -->
     
     <section>
-        <div class="col-md-4 text-center">
+        <div class="col-lg-12 text-center">
         <button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#resume">My Resume</button>
         </div>
         <div id="resume" class="collapse">
