--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#resume">My Resume</button>
         </div>
         <div id="resume" class="collapse">
-           <div id="ResumeRuby" class="-K-1KjYYXudDk2qcJFLb"><script src="http://backend.resumeruby.com/embed/v1/embed.js"></script></div>
+          <iframe src="https://drive.google.com/file/d/0B37tPwl37zhOSzJMZjIyQnhEQW8/preview" width="640" height="480"></iframe>
        </div>
     </section>
 
