--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <div class="col-lg-12 text-center">
         <button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#resume">My Resume</button>
         </div>
-        <div id="resume" class="collapse">
-          <iframe src="https://drive.google.com/file/d/0B37tPwl37zhOSzJMZjIyQnhEQW8/preview" width="640" height="480"></iframe>
+        <div id="resume" class="collapse text-center">
+          <iframe src="https://drive.google.com/file/d/0B37tPwl37zhOSzJMZjIyQnhEQW8/preview" width="800" height="600"></iframe>
        </div>
     </section>
 
